--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -66,7 +66,7 @@
 - name: "Mariko Kageyama"
   image: https://static.tdwg.org/conferences/2024/images/pc/kageyama-mariko.jpg
   description: >
-    _Independent, Seattle, Washington, USA. Mariko has been actively involved with SPNHC since 2002, including the time having served as a Member at Large on the SPNHC Council in 2011-2014. A Japanese native, Mariko has found her niche in volunteering as a bilingual facilitator connecting the SPNHC-TDWG 2024 Organizing Committee to local collaborators and resources in Okinawa. She currently practises law at an international law firm as a zoology collections manager-turned-lawyer, while in her spare time she has been passionate about exploring complex legal and ethical issues pertaining to science, technology, museums, and cultural heritage domains.
+    _Independent, Seattle, Washington, USA._ Mariko has been actively involved with SPNHC since 2002, including the time having served as a Member at Large on the SPNHC Council in 2011-2014. A Japanese native, Mariko has found her niche in volunteering as a bilingual facilitator connecting the SPNHC-TDWG 2024 Organizing Committee to local collaborators and resources in Okinawa. She currently practises law at an international law firm as a zoology collections manager-turned-lawyer, while in her spare time she has been passionate about exploring complex legal and ethical issues pertaining to science, technology, museums, and cultural heritage domains.
   orcid: 0000-0002-1121-4800
 
 - name: "Martin R. Kalfatovic"
