--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -18,7 +18,7 @@
   description: >
     _Yale Peabody Museum, New Haven, CT, USA._ Greg is a Senior Collection Manager of Vertebrate Zoology (Ichthyology and Herpetology). He is active in SPNHC as well as several Ichthyology and Herpetology organisations and BCONN. He’s a founding partner in the ZooMu initiative to bridge the gap between zoos and natural history museums. He maintains a life list of birds and concerts and is always interested in adding to either. He has been known to catch lizards.
   orcid: 0000-0002-7789-9806
-  twitter: cylon_gecko
+  twitter: @cylon_gecko
 
 - name: "Vijay Barve"
   image: https://static.tdwg.org/conferences/2024/images/pc/barve-vijay.jpg
@@ -135,7 +135,6 @@
   description: >
     _Scientific Researcher and Curator of Entomological Collection,  Professor and Accredited Advisor in the Specialization Program in Animals of Interest in Health: Animal Biology, and Coordinator of extension courses at the Butantan Institute/Foundation. Co-founder and part of the Executive Committee (voluntary vice-president) of the Brazilian Chapter of the International Organization Women in Global Health; part of Executive Committee (voluntary treasurer) of the "Organization for Women in Science for the Developing World"; part of the Equity, Diversity and Inclusion Committee of "International Society for Biocuration". São Paulo, Brazil._ Flávia Virginio is a biologist and PhD in Sciences. Her main lines of research, education and extension are: Biodiversity and One Health, emphasing on the impact of anthropogeny and climate changes on the diversity and ecology of medical important insects, as well as the dynamics of diseases and accidents related to them. She also has experience in vector control and resistance, creation and maintenance of relational databases and scientific dissemination. In addition, her research group also develops studies on Entomological Collection Curation, Diversity and Inclusion in Science and Scientific Dissemination and Communication.
   orcid: 0000-0003-1803-114X
-  instagram: dra.flaviavirginio
 
 - name: "Elycia Wallis"
   image: https://static.tdwg.org/conferences/2024/images/pc/wallis-ely.jpg
