--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -18,7 +18,7 @@
   description: >
     _Yale Peabody Museum, New Haven, CT, USA._ Greg is a Senior Collection Manager of Vertebrate Zoology (Ichthyology and Herpetology). He is active in SPNHC as well as several Ichthyology and Herpetology organisations and BCONN. He’s a founding partner in the ZooMu initiative to bridge the gap between zoos and natural history museums. He maintains a life list of birds and concerts and is always interested in adding to either. He has been known to catch lizards.
   orcid: 0000-0002-7789-9806
-  twitter: @cylon_gecko
+  twitter: cylon_gecko
 
 - name: "Vijay Barve"
   image: https://static.tdwg.org/conferences/2024/images/pc/barve-vijay.jpg
