--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -113,13 +113,13 @@
     _Secretary, Nature Mates, Kolkata._  Arjan co-founded the group with school friends in the early 90s (originally a WWF India Nature Club). Passionate about nature, particularly butterflies & birds, he pursues wildlife research & citizen science despite no formal training. Urban biodiversity & creating green spaces are his other core interests. Authored field guides for birds & butterflies.
 
 - name: "Young Ha Suh"
-  image: https://static.tdwg.org/conferences/2024/images/pc/
+  image: 
   description: >
     _Natural History Museum of Los Angeles County, Los Angeles, CA, USA._ Young Ha is the Collections Manager of Ornithology and has been active in SPNHC since 2022. During her PhD in Ecology and Evolutionary Biology, she worked extensively on field data collection and database management, allowing her to understand research needs in collections. Her current interest has been making Ornithology collections data more standardized and accessible to people outside of the collections field using applications such as shiny to create dynamic tables and figures. She is passionate about FAIR data practices and open access. 
   orcid: 0000-0001-5569-5127
 
 - name: "Harlan Svoboda"
-  image: https://static.tdwg.org/conferences/2024/images/pc/svoboda-harlan.jpg
+  image: 
   description: >
     _United States National Arboretum, U.S. Department of Agriculture, Washington, D.C., USA._ Harlan is a botanist and taxonomist with the USDA and the Curator of the herbarium collections. He is also the administrator of the ARS Biocollections portal, Data Steward for the federal government’s scientific collections registry, and is a leader in digitization efforts across the government. On the research front, Harlan is a specialist in the systematics and taxonomy of passionflowers (Passiflora) and a proponent of collections-based investigations across a multitude of fields. In addition to being an active member of SPNHC, Harlan also serves the natural history community through roles in several systematics- and collections-oriented societies.
   orcid: 0000-0001-9081-5980
