--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -36,7 +36,7 @@
 - name: "Jutta Buschbom"
   image: https://static.tdwg.org/conferences/2024/images/pc/buschbom-jutta.jpg
   description: >
-    _Natural History Museum London, UK._ Jutta works as data architect in the RECODE team that is developing and implementing the upcoming collection management system for the NHM in collaboration with a large industry partner. By training she is an evolutionary biologist with a focus on population genetic theory, biodiversity conservation genomic applications and their statistics, globally integrated, collaborative data infrastructures for Digital Extended Specimens and FAIR Digital Objects, science-policy advocacy mainly at the UN level and governance for the digital commons. She is an independent scientist and consultant located close to Hamburg, DE and has been active in SPNHC since 2020 and TDWG since 2021. She was co-chair of the SPNHC Biodiversity Crisis Response Committee (2021-2023) and is active as the society’s liaison to CETAF and its representative to the UN Convention for Biological Diversity. In TDWG she is engaged in several work streams and member of the Latimer Core maintenance group. [Website](https://statistical-genetics.com)
+    _Natural History Museum London, UK._ Jutta works as data architect in the RECODE team that is developing and implementing the upcoming collection management system for the NHM in collaboration with a large industry partner. By training she is an evolutionary biologist with a focus on population genetic theory, biodiversity conservation genomic applications and their statistics, globally integrated, collaborative data infrastructures for Digital Extended Specimens and FAIR Digital Objects, science-policy advocacy mainly at the UN level and governance for the digital commons. She is an independent scientist and consultant ([professional website](https://statistical-genetics.com))located close to Hamburg, DE and has been active in SPNHC since 2020 and TDWG since 2021. She was co-chair of the SPNHC Biodiversity Crisis Response Committee (2021-2023) and is active as the society’s liaison to CETAF and its representative to the UN Convention for Biological Diversity. In TDWG she is engaged in several work streams and member of the Latimer Core maintenance group. 
   orcid: 0000-0002-7697-9214
 
 - name: "Christina Byrd"
@@ -52,6 +52,12 @@
     _Plant Records Officer, Royal Botanic Garden, Edinburgh, Scotland_. The Plant Records Officer of the RBGE, handling the data management for both the Living and Herbarium collections. This includes the provision of data to the RBGE online catalogues as well as providing data to numerous external data partners I map the Living Collections of the RBGE, across all four of its sites and I am developing tools for the RBGE staff to use this data.  I am interested in how technology can be used to improve the visitor experience to RBGE, and how it can improve productivity in the horticultural department. I also work on information workflows within the RBGE herbarium, particularly how software and hardware can help make the information held within the 3 million herbarium sheets more accessible. 
   orcid: 0000-0001-7902-3843
   twitter: RBGE_Plant_Rec
+
+- name: "Nicole Fuller"
+  image: https://static.tdwg.org/conferences/2024/images/pc/fuller-nicole.jpg
+  description: >
+    _Environmental Archaeology Program, Florida Museum of Natural History, Gainesville, Florida, USA._ Nicole has been the Collection Manager for Environmental Archaeology since 2018. Her research interests are in the zooarchaeology of the Southeastern United States focusing on mound-building and seasonality using sclerochronology. She is a new member of SPNHC and in her role as collection manager, has interests in connecting archaeological faunal data to biodiversity data networks.
+  orcid: 0000-0002-1447-1466
 
 - name: "Jillian Goodwin"
   image: https://static.tdwg.org/conferences/2024/images/pc/goodwin-jillian.jpg
@@ -111,6 +117,8 @@
   image: https://static.tdwg.org/conferences/2024/images/pc/roy-arjan-basu.jpg
   description: >
     _Secretary, Nature Mates, Kolkata._  Arjan co-founded the group with school friends in the early 90s (originally a WWF India Nature Club). Passionate about nature, particularly butterflies & birds, he pursues wildlife research & citizen science despite no formal training. Urban biodiversity & creating green spaces are his other core interests. Authored field guides for birds & butterflies.
+  orcid: 0000-0001-9872-3562
+  twitter: Arjan_NMNC
 
 - name: "Young Ha Suh"
   image: 
