--- a/_data/spnhc-tdwg-2024-program-committee.yml
+++ b/_data/spnhc-tdwg-2024-program-committee.yml
@@ -101,6 +101,11 @@
     _Sacramento, CA, USA._ Erica is a biodiversity information scientist who has been involved as a member of SPNHC since 2015 and TDWG since 2019. She has worked in several natural history collections, as well as for iDigBio, and her expertise lies in designing and implementing systems to increase the digital availability and impact of biodiversity data.
   orcid: 0000-0003-3192-0080 
 
+- name: "Katie Leard"
+  image:
+  description: >
+    _de Young Museum / Legion of Honor, Conservation Department, San Francisco, CA, USA._ Katey works as the Collections Care Assistant for the de Young Museum and Legion of Honor. Her position carries out both museum’s Integrated Pest Management (IPM) plan, environmental monitoring system, gallery maintenance, and collections rehousing. Katey has been a member of SPNHC since 2015. She is passionate about the bridging of art and science within museum conservation and collections care.
+
 - name: "Kristen “Kit” Lewers"
   image: https://static.tdwg.org/conferences/2024/images/pc/lewers-kit.jpg
   description: >
