--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -15,7 +15,8 @@
     href: /conferences/2024/program-committee/
 - text: "Registration"
   menu:
-  - text: "Expected to open 1 May"
+  - text: "Registration"
+    href: /conferences/2024/registration/
 - text: "Submissions"
   menu:
   - text: "Calls"
