--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -17,6 +17,10 @@
   menu:
   - text: "Registration"
     href: /conferences/2024/registration/
+  - text: "Frequently Asked Questions"
+    href: /conferences/2024/registration/faq/
+  - text: "Cancellation Policy"
+    href: /conferences/2024/cancellation-policy/
   - text: "List of developing nations"
     href: /conferences/2024/registration/dev-nations-list/
 - text: "Submissions"
