Rename link externally-managed to external + indicate in nav

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,10 @@
 # Main navigation
 - text: "Standards"
-  href: /standards/
+  menu:
+  - text: "Maintained by TDWG"
+    href: /standards/
+  - text: "Externally maintained"
+    href: /standards/external/
 - text: "Journal"
   href: /journal/
 - text: "Community"
