--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -7,6 +7,8 @@
     href: /conferences/2024/code-of-conduct/
   - text: "Code of Conduct 🇯🇵"
     href: /conferences/2024/code-of-conduct/ja/
+  - text: "FAQ"
+    href: /conferences/2024/code-of-conduct/faq/
 - text: "Program"
   menu:
   - text: "Sessions"
@@ -28,9 +30,9 @@
   - text: "Calls"
   - text: "Call for sessions (CLOSED)"
     href: https://mailchi.mp/tdwg.org/spnhc-tdwg-2024-okinawa-call-for-organized-sessions
-  - text: "Call for Abstracts"
+  - text: "Call for OA Abstracts (CLOSED)"
     href: /conferences/2024/call-for-abstracts/
   - text: "---"
   - text: "Instructions"
-  - text: "OA Abstract Guidelines"
+  - text: "OA Abstract Guidelines (CLOSED)"
     href: /conferences/2024/oa-abstract-submission-guidelines/
