--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -11,6 +11,8 @@
     href: /conferences/2024/code-of-conduct/faq/
 - text: "Program"
   menu:
+  - text: "DRAFT Schedule"
+    href: /conference/2024/schedule/draft/
   - text: "Sessions"
     href: /conferences/2024/sessions/
   - text: "Program Committee"
