--- a/_data/tdwg-2024-navigation.yml
+++ b/_data/tdwg-2024-navigation.yml
@@ -27,6 +27,8 @@
     href: /conferences/2024/registration/cancellation-policy/
   - text: "List of developing nations"
     href: /conferences/2024/registration/dev-nations-list/
+  - text: "Excursions"
+    href: /conferences/2024/registration/excursions/
 - text: "Submissions"
   menu:
   - text: "Calls"
